updated skills + projects

--- a/index.html
+++ b/index.html
@@ -230,10 +230,16 @@
                       >scikit-learn</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >PyTorch</span
+                    >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Regex</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Tidyverse</span
+                    >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >Matplotlib</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Seaborn</span
@@ -258,6 +264,12 @@
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Automation</span
+                    >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >Data analysis</span
+                    >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >Machine learning</span
                     >
                   </div>
                 </div>
@@ -351,31 +363,27 @@
                   class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
                 >
                   <a
-                    href="https://github.com/DanielSon721/Home-Lab"
+                    href="https://github.com/DanielSon721/Professor-Ratings"
                     target="_blank"
                     rel="noopener noreferrer"
                     class="block flex-grow"
                   >
-                    <h3 class="text-xl font-bold mb-2">Home Lab</h3>
+                    <h3 class="text-xl font-bold mb-2">Professor Reviews</h3>
                     <p class="text-gray-400 mb-3 min-h-[4.5rem]">
-                      VM configuration, network analysis, ethical hacking
+                      Predicting professor ratings with machine learning
                     </p>
                     <div class="mt-auto">
                       <span
                         class="text-xs bg-pink-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
-                        >Kali Linux</span
+                        >Python</span
                       >
                       <span
                         class="text-xs bg-pink-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
-                        >VMWare</span
+                        >PyTorch</span
                       >
                       <span
                         class="text-xs bg-pink-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
-                        >Wireshark</span
-                      >
-                      <span
-                        class="text-xs bg-pink-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
-                        >Nmap</span
+                        >PlanetTerp API</span
                       >
                     </div>
                   </a>
@@ -478,7 +486,7 @@
                   >
                     <h3 class="text-xl font-bold mb-2">Hacking Tools</h3>
                     <p class="text-gray-400 mb-3 min-h-[4.5rem]">
-                      Collection of cybersecurity tools and scripts
+                      Collection of offensive tools and scripts
                     </p>
                     <div class="mt-auto">
                       <span
@@ -488,10 +496,6 @@
                       <span
                         class="text-xs bg-indigo-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
                         >Nmap</span
-                      >
-                      <span
-                        class="text-xs bg-indigo-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
-                        >Metasploit</span
                       >
                       <span
                         class="text-xs bg-indigo-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
@@ -533,14 +537,15 @@
                   class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
                 >
                   <a
-                    href="https://github.com/DanielSon721/Texas-Hold-em-Poker"
+                    href="https://github.com/DanielSon721/Bittorent"
                     target="_blank"
                     rel="noopener noreferrer"
                     class="block flex-grow"
                   >
-                    <h3 class="text-xl font-bold mb-2">Texas Hold'em Poker</h3>
+                    <h3 class="text-xl font-bold mb-2">BitTorrent Client</h3>
                     <p class="text-gray-400 mb-3 min-h-[4.5rem]">
-                      Play poker against A.I. opponents
+                      BitTorrent node that participates in the decentralized P2P
+                      network
                     </p>
                     <div class="mt-auto">
                       <span
