--- a/projects.html
+++ b/projects.html
@@ -85,31 +85,23 @@
                 class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
                 <a
-                  href="https://github.com/DanielSon721/Home-Lab"
+                  href="https://github.com/DanielSon721/Professor-Ratings"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="block flex-grow"
                 >
-                  <h3 class="text-xl font-bold mb-2">Home Lab</h3>
+                  <h3 class="text-xl font-bold mb-2">Professor Reviews</h3>
                   <p class="text-gray-400 mb-3 min-h-[4.5rem]">
-                    VM configuration, network analysis, ethical hacking
+                    Predicting professor ratings with machine learning
                   </p>
                   <div class="mt-auto">
                     <span
                       class="text-xs bg-pink-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
-                      >Kali Linux</span
+                      >Python</span
                     >
                     <span
                       class="text-xs bg-pink-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
-                      >VMWare</span
-                    >
-                    <span
-                      class="text-xs bg-pink-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
-                      >Wireshark</span
-                    >
-                    <span
-                      class="text-xs bg-pink-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
-                      >Nmap</span
+                      >PyTorch</span
                     >
                   </div>
                 </a>
@@ -212,7 +204,7 @@
                 >
                   <h3 class="text-xl font-bold mb-2">Hacking Tools</h3>
                   <p class="text-gray-400 mb-3 min-h-[4.5rem]">
-                    Collection of cybersecurity tools and scripts
+                    Collection of offensive tools and scripts
                   </p>
                   <div class="mt-auto">
                     <span
@@ -267,14 +259,15 @@
                 class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
                 <a
-                  href="https://github.com/DanielSon721/Texas-Hold-em-Poker"
+                  href="https://github.com/DanielSon721/Bittorent"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="block flex-grow"
                 >
-                  <h3 class="text-xl font-bold mb-2">Texas Hold'em Poker</h3>
+                  <h3 class="text-xl font-bold mb-2">BitTorrent Client</h3>
                   <p class="text-gray-400 mb-3 min-h-[4.5rem]">
-                    Play poker against A.I. opponents
+                    BitTorrent node that participates in the decentralized P2P
+                    network
                   </p>
                   <div class="mt-auto">
                     <span
@@ -431,23 +424,19 @@
                 class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
                 <a
-                  href="https://github.com/DanielSon721/Complex-Calculator"
+                  href="https://github.com/DanielSon721/Texas-Hold-em-Poker"
                   target="_blank"
                   rel="noopener noreferrer"
                   class="block flex-grow"
                 >
-                  <h3 class="text-xl font-bold mb-2">Complex Calculator</h3>
+                  <h3 class="text-xl font-bold mb-2">Texas Hold'em Poker</h3>
                   <p class="text-gray-400 mb-3 min-h-[4.5rem]">
-                    Fraction and complex number calulator
+                    Play poker against A.I. opponents
                   </p>
                   <div class="mt-auto">
                     <span
                       class="text-xs bg-orange-700 px-2 py-1 rounded mr-1 mb-1 inline-block"
-                      >Java</span
-                    >
-                    <span
-                      class="text-xs bg-orange-700 px-2 py-1 rounded mr-1 mb-1 inline-block"
-                      >Breezyswing</span
+                      >Python</span
                     >
                   </div>
                 </a>
