--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
                     <div class="mt-auto">
                       <span
                         class="text-xs bg-pink-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
-                        >Python</span
+                        >Jupyter Notebook</span
                       >
                       <span
                         class="text-xs bg-pink-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
