--- a/projects.html
+++ b/projects.html
@@ -97,11 +97,15 @@
                   <div class="mt-auto">
                     <span
                       class="text-xs bg-pink-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
-                      >Python</span
+                      >Jupyter Notebook</span
                     >
                     <span
                       class="text-xs bg-pink-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
                       >PyTorch</span
+                    >
+                    <span
+                      class="text-xs bg-pink-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                      >PlanetTerp API</span
                     >
                   </div>
                 </a>
@@ -214,10 +218,6 @@
                     <span
                       class="text-xs bg-indigo-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
                       >Nmap</span
-                    >
-                    <span
-                      class="text-xs bg-indigo-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
-                      >Metasploit</span
                     >
                     <span
                       class="text-xs bg-indigo-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
