--- a/index.html
+++ b/index.html
@@ -155,7 +155,9 @@
                 </div>
 
                 <div>
-                  <h3 class="text-xl font-semibold mb-2">Security Tools</h3>
+                  <h3 class="text-xl font-semibold mb-2">
+                    Cybersecurity Tools
+                  </h3>
                   <div class="flex flex-wrap gap-2">
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >Nmap</span
