added more projects

--- a/index.html
+++ b/index.html
@@ -220,6 +220,9 @@
                   <h3 class="text-xl font-semibold mb-2">Libraries</h3>
                   <div class="flex flex-wrap gap-2">
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >Flask</span
+                    >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >BreezySwing</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
