--- a/projects.html
+++ b/projects.html
@@ -53,7 +53,7 @@
             <div
               class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mb-8"
             >
-              <!-- Project 1 -->
+              <!-- Project -->
               <div
                 class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
@@ -80,7 +80,7 @@
                 </a>
               </div>
 
-              <!-- Project 2 -->
+              <!-- Project -->
               <div
                 class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
@@ -111,7 +111,7 @@
                 </a>
               </div>
 
-              <!-- Project 3 -->
+              <!-- Project -->
               <div
                 class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
@@ -138,7 +138,7 @@
                 </a>
               </div>
 
-              <!-- Project 4 -->
+              <!-- Project -->
               <div
                 class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
@@ -165,7 +165,7 @@
                 </a>
               </div>
 
-              <!-- Project 5 -->
+              <!-- Project -->
               <div
                 class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
@@ -196,7 +196,7 @@
                 </a>
               </div>
 
-              <!-- Project 6 -->
+              <!-- Project -->
               <div
                 class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
@@ -227,7 +227,7 @@
                 </a>
               </div>
 
-              <!-- Project 7 -->
+              <!-- Project -->
               <div
                 class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
@@ -254,7 +254,7 @@
                 </a>
               </div>
 
-              <!-- Project 8 -->
+              <!-- Project -->
               <div
                 class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
@@ -278,7 +278,7 @@
                 </a>
               </div>
 
-              <!-- Project 9 -->
+              <!-- Project -->
               <div
                 class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
@@ -309,7 +309,7 @@
                 </a>
               </div>
 
-              <!-- Project 10 -->
+              <!-- Project -->
               <div
                 class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
@@ -338,7 +338,7 @@
                 </a>
               </div>
 
-              <!-- Project 11 -->
+              <!-- Project -->
               <div
                 class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
@@ -361,7 +361,7 @@
                 </a>
               </div>
 
-              <!-- Project 12 -->
+              <!-- Project -->
               <div
                 class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
@@ -388,7 +388,7 @@
                 </a>
               </div>
 
-              <!-- Project 13 -->
+              <!-- Project -->
               <div
                 class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
@@ -419,7 +419,7 @@
                 </a>
               </div>
 
-              <!-- Project 14 -->
+              <!-- Project -->
               <div
                 class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
@@ -435,14 +435,14 @@
                   </p>
                   <div class="mt-auto">
                     <span
-                      class="text-xs bg-orange-700 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                      class="text-xs bg-cyan-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
                       >Python</span
                     >
                   </div>
                 </a>
               </div>
 
-              <!-- Project 15 -->
+              <!-- Project -->
               <div
                 class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
               >
@@ -468,6 +468,188 @@
                     <span
                       class="text-xs bg-purple-900 px-2 py-1 rounded mr-1 mb-1 inline-block"
                       >Tidyverse</span
+                    >
+                  </div>
+                </a>
+              </div>
+
+              <!-- Project -->
+              <div
+                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+              >
+                <a
+                  href="https://github.com/DanielSon721/Client-Server"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="block flex-grow"
+                >
+                  <h3 class="text-xl font-bold mb-2">Client and Server</h3>
+                  <p class="text-gray-400 mb-3 min-h-[4.5rem]">
+                    TCP + UDP client and server
+                  </p>
+                  <div class="mt-auto">
+                    <span
+                      class="text-xs bg-pink-900 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                      >C</span
+                    >
+                  </div>
+                </a>
+              </div>
+
+              <!-- Project -->
+              <div
+                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+              >
+                <a
+                  href="https://github.com/DanielSon721/Reverse-Engineered-Chatroom-Server"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="block flex-grow"
+                >
+                  <h3 class="text-xl font-bold mb-2">
+                    Reversed Engineered Chat Room
+                  </h3>
+                  <p class="text-gray-400 mb-3 min-h-[4.5rem]">
+                    Deconstructed an undocumented binary chat protocol
+                  </p>
+                  <div class="mt-auto">
+                    <span
+                      class="text-xs bg-teal-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                      >C</span
+                    >
+                    <span
+                      class="text-xs bg-teal-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                      >Wireshark</span
+                    >
+                    <span
+                      class="text-xs bg-teal-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                      >tcpdump</span
+                    >
+                  </div>
+                </a>
+              </div>
+
+              <!-- Project -->
+              <div
+                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+              >
+                <a
+                  href="https://github.com/DanielSon721/Complex-Calculator"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="block flex-grow"
+                >
+                  <h3 class="text-xl font-bold mb-2">Complex Calculator</h3>
+                  <p class="text-gray-400 mb-3 min-h-[4.5rem]">
+                    Fraction and complex number calulator
+                  </p>
+                  <div class="mt-auto">
+                    <span
+                      class="text-xs bg-orange-700 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                      >Java</span
+                    >
+                    <span
+                      class="text-xs bg-orange-700 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                      >Breezyswing</span
+                    >
+                  </div>
+                </a>
+              </div>
+
+              <!-- Project -->
+              <div
+                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+              >
+                <a
+                  href="https://github.com/DanielSon721/Cryptographic-Tools"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="block flex-grow"
+                >
+                  <h3 class="text-xl font-bold mb-2">Cryptographic Tools</h3>
+                  <p class="text-gray-400 mb-3 min-h-[4.5rem]">
+                    Caesar cipher, Diffie-Hellman key exchange, Vigenere cipher
+                  </p>
+                  <div class="mt-auto">
+                    <span
+                      class="text-xs bg-lime-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                      >Python</span
+                    >
+                  </div>
+                </a>
+              </div>
+
+              <!-- Project -->
+              <div
+                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+              >
+                <a
+                  href="https://github.com/DanielSon721/Home-Lab"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="block flex-grow"
+                >
+                  <h3 class="text-xl font-bold mb-2">Home Lab</h3>
+                  <p class="text-gray-400 mb-3 min-h-[4.5rem]">
+                    VM configuration, network analysis, ethical hacking
+                  </p>
+                  <div class="mt-auto">
+                    <span
+                      class="text-xs bg-fuchsia-500 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                      >Kali Linux</span
+                    >
+                    <span
+                      class="text-xs bg-fuchsia-500 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                      >VMWare</span
+                    >
+                    <span
+                      class="text-xs bg-fuchsia-500 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                      >Wireshark</span
+                    >
+                    <span
+                      class="text-xs bg-fuchsia-500 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                      >Nmap</span
+                    >
+                  </div>
+                </a>
+              </div>
+
+              <!-- Project -->
+              <div
+                class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
+              >
+                <a
+                  href="https://github.com/DanielSon721/Login-Page-Penetration-Test"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="block flex-grow"
+                >
+                  <h3 class="text-xl font-bold mb-2">
+                    Login Page Penetration Test
+                  </h3>
+                  <p class="text-gray-400 mb-3 min-h-[4.5rem]">
+                    Identified and patched vulnerabilities in a login page
+                  </p>
+                  <div class="mt-auto">
+                    <span
+                      class="text-xs bg-sky-700 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                      >Python</span
+                    >
+                    <span
+                      class="text-xs bg-sky-700 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                      >Flask</span
+                    >
+                    <span
+                      class="text-xs bg-sky-700 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                      >SQL</span
+                    >
+                    <span
+                      class="text-xs bg-sky-700 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                      >HTML</span
+                    >
+                    <span
+                      class="text-xs bg-sky-700 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                      >Hydra</span
                     >
                   </div>
                 </a>
