--- a/index.html
+++ b/index.html
@@ -484,27 +484,20 @@
                   class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
                 >
                   <a
-                    href="https://github.com/DanielSon721/Hacking-Tools"
+                    href="https://github.com/DanielSon721/Bittorent"
                     target="_blank"
                     rel="noopener noreferrer"
                     class="block flex-grow"
                   >
-                    <h3 class="text-xl font-bold mb-2">Hacking Tools</h3>
+                    <h3 class="text-xl font-bold mb-2">BitTorrent Client</h3>
                     <p class="text-gray-400 mb-3 min-h-[4.5rem]">
-                      Collection of offensive tools and scripts
+                      BitTorrent node that participates in the decentralized P2P
+                      network
                     </p>
                     <div class="mt-auto">
                       <span
-                        class="text-xs bg-indigo-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                        class="text-xs bg-red-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
                         >Python</span
-                      >
-                      <span
-                        class="text-xs bg-indigo-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
-                        >Nmap</span
-                      >
-                      <span
-                        class="text-xs bg-indigo-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
-                        >Gemini API</span
                       >
                     </div>
                   </a>
@@ -542,20 +535,29 @@
                   class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
                 >
                   <a
-                    href="https://github.com/DanielSon721/Bittorent"
+                    href="https://github.com/DanielSon721/Reverse-Engineered-Chatroom-Server"
                     target="_blank"
                     rel="noopener noreferrer"
                     class="block flex-grow"
                   >
-                    <h3 class="text-xl font-bold mb-2">BitTorrent Client</h3>
+                    <h3 class="text-xl font-bold mb-2">
+                      Reversed Engineered Chat Room
+                    </h3>
                     <p class="text-gray-400 mb-3 min-h-[4.5rem]">
-                      BitTorrent node that participates in the decentralized P2P
-                      network
+                      Deconstructed an undocumented binary chat protocol
                     </p>
                     <div class="mt-auto">
                       <span
-                        class="text-xs bg-red-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
-                        >Python</span
+                        class="text-xs bg-teal-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                        >C</span
+                      >
+                      <span
+                        class="text-xs bg-teal-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                        >Wireshark</span
+                      >
+                      <span
+                        class="text-xs bg-teal-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                        >tcpdump</span
                       >
                     </div>
                   </a>
