--- a/index.html
+++ b/index.html
@@ -199,6 +199,9 @@
                       >Unity</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
+                      >MATLAB</span
+                    >
+                    <span class="text-sm bg-gray-700 px-2 py-1 rounded"
                       >RStudio</span
                     >
                     <span class="text-sm bg-gray-700 px-2 py-1 rounded"
@@ -399,23 +402,27 @@
                   class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
                 >
                   <a
-                    href="https://github.com/DanielSon721/Unix-Shell"
+                    href="https://github.com/DanielSon721/Auto-Messenger"
                     target="_blank"
                     rel="noopener noreferrer"
                     class="block flex-grow"
                   >
-                    <h3 class="text-xl font-bold mb-2">Unix Shell</h3>
+                    <h3 class="text-xl font-bold mb-2">Auto Messenger</h3>
                     <p class="text-gray-400 mb-3 min-h-[4.5rem]">
-                      Custom implementation of a Unix shell
+                      Messaging system for fraternity financial communications
                     </p>
                     <div class="mt-auto">
                       <span
-                        class="text-xs bg-purple-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
-                        >C</span
+                        class="text-xs bg-green-700 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                        >Python</span
                       >
                       <span
-                        class="text-xs bg-purple-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
-                        >gdb</span
+                        class="text-xs bg-green-700 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                        >pandas</span
+                      >
+                      <span
+                        class="text-xs bg-green-700 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                        >Google Sheets API</span
                       >
                     </div>
                   </a>
@@ -453,27 +460,23 @@
                   class="bg-gray-800/70 p-4 rounded-lg hover:scale-[1.02] transition-transform flex flex-col h-full"
                 >
                   <a
-                    href="https://github.com/DanielSon721/Auto-Messenger"
+                    href="https://github.com/DanielSon721/Unix-Shell"
                     target="_blank"
                     rel="noopener noreferrer"
                     class="block flex-grow"
                   >
-                    <h3 class="text-xl font-bold mb-2">Auto Messenger</h3>
+                    <h3 class="text-xl font-bold mb-2">Unix Shell</h3>
                     <p class="text-gray-400 mb-3 min-h-[4.5rem]">
-                      Messaging system for fraternity financial communications
+                      Custom implementation of a Unix shell
                     </p>
                     <div class="mt-auto">
                       <span
-                        class="text-xs bg-green-700 px-2 py-1 rounded mr-1 mb-1 inline-block"
-                        >Python</span
+                        class="text-xs bg-purple-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                        >C</span
                       >
                       <span
-                        class="text-xs bg-green-700 px-2 py-1 rounded mr-1 mb-1 inline-block"
-                        >pandas</span
-                      >
-                      <span
-                        class="text-xs bg-green-700 px-2 py-1 rounded mr-1 mb-1 inline-block"
-                        >Google Sheets API</span
+                        class="text-xs bg-purple-600 px-2 py-1 rounded mr-1 mb-1 inline-block"
+                        >gdb</span
                       >
                     </div>
                   </a>
@@ -717,14 +720,14 @@
                 </div>
 
                 <div class="course-tile math-course">
-                  <h4 class="font-semibold">Advanced Calculus</h4>
-                  <p class="text-sm text-gray-400 mt-1">Real analysis</p>
+                  <h4 class="font-semibold">Real analysis</h4>
+                  <p class="text-sm text-gray-400 mt-1">Rigorous proofs</p>
                 </div>
 
                 <div class="course-tile math-course">
                   <h4 class="font-semibold">Differential Equations</h4>
                   <p class="text-sm text-gray-400 mt-1">
-                    Ordinary differential equations
+                    Modeling and predicting dynamic behavior
                   </p>
                 </div>
 
